@@ -28,9 +28,68 @@ Before using Descartes tools:
 2. Look for Descartes startup messages in application logs
 3. Check if MCP client configuration includes Descartes server
 
+### Starting Descartes with Hot Reload Support
+
+For hot reload capability, start the application with the Java agent:
+```bash
+# Basic: Start with hot reload support
+java -javaagent:descartes-mcp-jar-with-dependencies.jar \
+     -jar descartes-mcp-jar-with-dependencies.jar
+
+# With additional JVM flags for better compatibility
+java -XX:+EnableDynamicAgentLoading \
+     -javaagent:descartes-mcp-jar-with-dependencies.jar \
+     -jar your-application.jar
+
+# Using the convenience script
+./run-with-hotreload.sh
+```
+
 ### Available Descartes Tools
 
-#### 1. JShell REPL (`jshell_repl`)
+#### 1. Hot Class Reload (`hot_reload_classes`) 🔥 **[Requires Agent Mode]**
+**Use for:** Dynamically reloading modified Java classes without restarting
+```json
+// Reload all modified classes in a package
+{
+  "packageFilter": "com.myapp.service.*",
+  "force": false,
+  "validateOnly": false
+}
+
+// Validate changes without reloading
+{
+  "packageFilter": "com.myapp.*",
+  "validateOnly": true
+}
+
+// Force reload even without file changes
+{
+  "packageFilter": "com.myapp.utils.Helper",
+  "force": true
+}
+```
+
+**Key capabilities:**
+- Reload method implementations instantly
+- Update logging and debug statements
+- Fix bugs without restart
+- Test changes immediately
+- Validate compatibility before reload
+
+**Limitations:**
+- Cannot add/remove fields
+- Cannot change method signatures
+- Cannot modify class hierarchy
+- Cannot change interfaces
+
+**Workflow:**
+1. Edit your Java source files
+2. Compile: `mvn compile` or `gradle classes`
+3. Use hot_reload_classes tool to reload
+4. Test changes with JShell
+
+#### 2. JShell REPL (`jshell_repl`)
 **Use for:** Interactive Java code execution within the running application
 ```java
 // Examples:
@@ -42,6 +101,11 @@ System.out.println("Active users: " + users.size());
 var service = context.get("myService");
 var result = service.processData(testInput);
 
+// Test hot-reloaded classes
+var reloadedClass = Class.forName("com.myapp.service.UpdatedService");
+var instance = context.get("updatedService");
+instance.newMethod(); // Test the reloaded method
+
 // Modify runtime behavior (use cautiously)
 var config = context.get("configuration");
 config.setDebugMode(true);
@@ -51,8 +115,9 @@ config.setDebugMode(true);
 - Session state persists - use `session_id` for continuity
 - Access application objects through `context` map
 - Changes affect the running application immediately
+- Perfect for testing hot-reloaded classes
 
-#### 2. Object Inspector (`object_inspector`)
+#### 3. Object Inspector (`object_inspector`)
 **Use for:** Deep inspection of objects without code execution
 - Examine field values, methods, and type information
 - Navigate object graphs safely
@@ -114,6 +179,41 @@ Logger: com.myapp.service
 
 ### Common Debugging Workflows
 
+#### Hot Reload Development Cycle
+1. Identify the class/method that needs changes
+2. Edit the Java source file with your fix
+3. Compile the changes: `mvn compile` or `gradle classes`
+4. Use `hot_reload_classes` to reload: `{"packageFilter": "com.myapp.ClassName"}`
+5. Test with `jshell_repl` to verify the fix works
+6. Iterate without restarting!
+
+**Example session:**
+```json
+// 1. Check current behavior with JShell
+jshell_repl: {
+  "session_id": "fix-session",
+  "code": "var calc = context.get('calculator'); calc.calculate(10, 0);"
+}
+// Returns error: Division by zero
+
+// 2. Fix the code in Calculator.java, add zero check
+// 3. Compile: mvn compile
+
+// 4. Hot reload the fixed class
+hot_reload_classes: {
+  "packageFilter": "com.myapp.util.Calculator",
+  "validateOnly": false
+}
+// Returns: Successfully reloaded 1 class
+
+// 5. Test the fix
+jshell_repl: {
+  "session_id": "fix-session", 
+  "code": "calc.calculate(10, 0);"
+}
+// Returns: 0 (or appropriate default)
+```
+
 #### Investigating a NullPointerException
 1. Use `exception_analysis` to get the full stack trace
 2. Use `object_inspector` to examine objects in the call path
@@ -156,22 +256,39 @@ Access these through MCP resource requests:
 3. **Document Findings**: Include Descartes discoveries in issue analysis
 4. **Test Before Changing**: Verify hypotheses with JShell before modifying code
 5. **Monitor Impact**: Use system_monitoring when making runtime changes
+6. **Hot Reload First**: When agent is loaded, try hot reload before restarting
+7. **Validate Before Reload**: Use `validateOnly: true` to check compatibility
+8. **Incremental Changes**: Reload small sets of classes for easier debugging
 
 ### Security Considerations
 
-**WARNING**: JShell provides arbitrary code execution. When using Descartes:
+**WARNING**: JShell and Hot Reload provide powerful runtime capabilities. When using Descartes:
 - Only execute code you understand
 - Be cautious with state modifications in production
 - Never expose Descartes ports to public networks
 - Treat JShell access as root-level privilege
+- Hot reload requires Java agent with full JVM access
+- Validate all changes before reloading in production
+- Monitor application behavior after hot reloads
 
 ### Integration with Development Workflow
 
 When debugging issues in this application:
 1. **First**: Check if Descartes is available and running
-2. **Second**: Use Descartes tools to understand the runtime state
-3. **Third**: Test potential fixes using JShell
-4. **Finally**: Implement permanent fixes in code
+2. **Second**: Check if agent is loaded for hot reload: `jshell_repl: {"code": "com.bitsapplied.descartes.hotreload.agent.HotReloadAgent.isAgentLoaded()"}`
+3. **Third**: Use Descartes tools to understand the runtime state
+4. **Fourth**: Fix and hot reload if possible, or test with JShell
+5. **Finally**: Implement permanent fixes in code
+
+#### Quick Hot Reload Check
+```java
+// In JShell - Check if hot reload is available
+jshell_repl: {
+  "session_id": "check",
+  "code": "var agent = com.bitsapplied.descartes.hotreload.agent.HotReloadAgent.isAgentLoaded(); 
+          System.out.println(\"Hot reload available: \" + agent);"
+}
+```
 
 ### Example Debugging Session
 
@@ -209,6 +326,149 @@ If Descartes tools are not available:
 4. Ensure MCP client configuration is correct
 5. Test connection with: `telnet localhost 9080`
 
+If hot reload is not working:
+1. Check agent was loaded at startup: Look for `-javaagent` in process args
+2. Verify compilation output directory matches runtime classpath
+3. Check for SecurityManager restrictions
+4. Review agent initialization logs at startup
+5. Test with a simple class first before complex ones
+6. Ensure you're not trying incompatible changes (field/signature changes)
+
 ---
 
-**Remember**: Descartes is your window into the running application. Use it to understand before you change.
+## Hot Reload Quick Reference
+
+### When to Use Hot Reload
+
+**Perfect for:**
+- Fixing bugs in method implementations
+- Adding/updating logging statements
+- Adjusting business logic
+- Tweaking algorithms
+- Updating error messages
+- Modifying return values
+- Changing conditional logic
+
+**Cannot be used for:**
+- Adding/removing fields
+- Changing method signatures
+- Modifying class hierarchy
+- Adding/removing methods
+- Changing annotations
+- Interface modifications
+
+### Hot Reload Command Examples
+
+```json
+// Basic reload of a single class
+hot_reload_classes: {
+  "packageFilter": "com.myapp.service.UserService"
+}
+
+// Reload all classes in a package
+hot_reload_classes: {
+  "packageFilter": "com.myapp.service.*"
+}
+
+// Validate changes first (recommended)
+hot_reload_classes: {
+  "packageFilter": "com.myapp.*",
+  "validateOnly": true
+}
+
+// Force reload even without timestamp changes
+hot_reload_classes: {
+  "packageFilter": "com.myapp.util.*",
+  "force": true
+}
+```
+
+### Complete Hot Reload Workflow
+
+```bash
+# 1. Start application with agent
+java -XX:+EnableDynamicAgentLoading \
+     -javaagent:descartes-mcp-jar-with-dependencies.jar \
+     -jar your-app.jar
+
+# 2. Edit your Java files
+vim src/main/java/com/myapp/service/BrokenService.java
+
+# 3. Compile changes
+mvn compile -pl :your-module
+
+# 4. Connect to Descartes and reload
+# Use your MCP client to send:
+{
+  "tool": "hot_reload_classes",
+  "arguments": {
+    "packageFilter": "com.myapp.service.BrokenService",
+    "validateOnly": false
+  }
+}
+
+# 5. Test the fix immediately with JShell
+{
+  "tool": "jshell_repl",
+  "arguments": {
+    "session_id": "test-fix",
+    "code": "var service = context.get('brokenService'); service.fixedMethod();"
+  }
+}
+```
+
+### Response Format
+
+Success response:
+```json
+{
+  "status": "success",
+  "classesAnalyzed": 5,
+  "classesChanged": 2,
+  "classesReloaded": 2,
+  "reloadedClasses": [
+    "com.myapp.service.UserService",
+    "com.myapp.service.OrderService"
+  ],
+  "reloadTimeMs": 45,
+  "message": "Successfully reloaded 2 classes"
+}
+```
+
+Validation response:
+```json
+{
+  "status": "success",
+  "classesAnalyzed": 10,
+  "classesChanged": 3,
+  "classesReloaded": 0,
+  "incompatibleChanges": {
+    "com.myapp.model.User": "Field added: private String newField"
+  },
+  "message": "Validation complete: 3 compatible changes, 1 incompatible"
+}
+```
+
+Error response:
+```json
+{
+  "status": "error",
+  "error": "Hot reload agent not loaded. Start with -javaagent flag",
+  "agentRequired": true,
+  "suggestion": "Restart with: java -javaagent:descartes.jar -jar app.jar"
+}
+```
+
+### Pro Tips
+
+1. **Always validate first** when reloading multiple classes
+2. **Use specific class names** for faster reload of single files
+3. **Compile incrementally** with `mvn compile -pl :module` for large projects
+4. **Keep a JShell session** open for testing reloaded classes
+5. **Monitor logs** during reload for any initialization issues
+6. **Start with small changes** and reload frequently
+7. **Use force reload** sparingly, only when timestamp detection fails
+
+---
+
+**Remember**: Descartes is your window into the running application. Use it to understand before you change. With hot reload, it's also your tool to fix without restarting.
